--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,15 +7,8 @@ services:
     depends_on:
       - db
       - redis
-    environment:
-      - DB_HOST=db
-      - DB_PORT=${DB_PORT}
-      - DB_NAME=${DB_NAME}
-      - DB_USER=${DB_USER}
-      - DB_PASSWORD=${DB_PASSWORD}
-      - BOT_TOKEN=${BOT_TOKEN}
-      - ADMIN_PASSWORD=${ADMIN_PASSWORD}
-      - REDIS_URL=redis://redis:6379/0
+    env_file:
+      - .env
     volumes:
       - .:/app
     restart: always
@@ -28,14 +21,11 @@ services:
     container_name: hdays_db
     volumes:
       - ./postgres_data:/var/lib/postgresql/data
-    environment:
-      - POSTGRES_DB=${DB_NAME}
-      - POSTGRES_USER=${DB_USER}
-      - POSTGRES_PASSWORD=${DB_PASSWORD}
+    env_file:
+      - .env
     restart: always
     ports:
       - 5455:5432
-    user: "1000:1000"
 
   redis:
     image: redis:alpine
@@ -48,15 +38,8 @@ services:
     depends_on:
       - db
       - redis
-    environment:
-      - DB_HOST=db
-      - DB_PORT=${DB_PORT}
-      - DB_NAME=${DB_NAME}
-      - DB_USER=${DB_USER}
-      - DB_PASSWORD=${DB_PASSWORD}
-      - BOT_TOKEN=${BOT_TOKEN}
-      - ADMIN_PASSWORD=${ADMIN_PASSWORD}
-      - REDIS_URL=redis://redis:6379/0
+    env_file:
+      - .env
     volumes:
       - .:/app
     restart: always
@@ -68,15 +51,8 @@ services:
     depends_on:
       - db
       - redis
-    environment:
-      - DB_HOST=db
-      - DB_PORT=${DB_PORT}
-      - DB_NAME=${DB_NAME}
-      - DB_USER=${DB_USER}
-      - DB_PASSWORD=${DB_PASSWORD}
-      - BOT_TOKEN=${BOT_TOKEN}
-      - ADMIN_PASSWORD=${ADMIN_PASSWORD}
-      - REDIS_URL=redis://redis:6379/0
+    env_file:
+      - .env
     volumes:
       - .:/app
     restart: always
