--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     container_name: hdays_bot
     depends_on:
       - db
-      - redis
+      # - redis
     env_file:
       - .env
     volumes:
@@ -27,36 +27,36 @@ services:
     ports:
       - 5455:5432
 
-  redis:
-    image: redis:alpine
-    container_name: hdays_redis
-    restart: always
+  # redis:
+  #   image: redis:alpine
+  #   container_name: hdays_redis
+  #   restart: always
 
-  celery_worker:
-    build: .
-    container_name: hdays_celery_worker
-    depends_on:
-      - db
-      - redis
-    env_file:
-      - .env
-    volumes:
-      - .:/app
-    restart: always
-    command: celery -A tasks worker --loglevel=info
+  # celery_worker:
+  #   build: .
+  #   container_name: hdays_celery_worker
+  #   depends_on:
+  #     - db
+  #     - redis
+  #   env_file:
+  #     - .env
+  #   volumes:
+  #     - .:/app
+  #   restart: always
+  #   command: celery -A tasks worker --loglevel=info
 
-  celery_beat:
-    build: .
-    container_name: hdays_celery_beat
-    depends_on:
-      - db
-      - redis
-    env_file:
-      - .env
-    volumes:
-      - .:/app
-    restart: always
-    command: celery -A tasks beat --loglevel=info
+  # celery_beat:
+  #   build: .
+  #   container_name: hdays_celery_beat
+  #   depends_on:
+  #     - db
+  #     - redis
+  #   env_file:
+  #     - .env
+  #   volumes:
+  #     - .:/app
+  #   restart: always
+  #   command: celery -A tasks beat --loglevel=info
 
 volumes:
   postgres_data:
