--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-telebot
-psycopg2-binary
-schedule
-bcrypt
-python-dotenv
-watchdog
-redis
-celery
-pytest
-pytest-mock
-pyTelegramBotAPI
-pytz
+telebot==0.0.5
+psycopg2-binary==2.9.9
+schedule==1.2.1
+bcrypt==4.1.2
+python-dotenv==1.0.1
+watchdog==3.0.0
+redis==5.0.1
+celery==5.3.6
+pytest==8.0.2
+pytest-mock==3.12.0
+pyTelegramBotAPI==4.15.4
+pytz==2024.1
