--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,9 @@ services:
     #   options:
     #     max-size: "200k"
     #     max-file: "10"
+    networks:
+      - app-network
+
   db:
     image: postgres:16
     container_name: hdays_db
@@ -37,24 +40,37 @@ services:
     restart: always
     ports:
       - 5455:5432
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER}"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+    networks:
+      - app-network
 
   redis:
     image: redis:alpine
     container_name: hdays_redis
     restart: always
+    networks:
+      - app-network
 
   celery_worker:
     build: .
     container_name: hdays_celery_worker
     depends_on:
-      - db
-      - redis
+      db:
+        condition: service_healthy
+      redis:
+        condition: service_started
     env_file:
       - .env
     volumes:
       - .:/app
     restart: always
     command: celery -A tasks worker --loglevel=info
+    networks:
+      - app-network
 
   celery_beat:
     build: .
@@ -68,7 +84,13 @@ services:
       - .:/app
     restart: always
     command: celery -A tasks beat --loglevel=info
+    networks:
+      - app-network
 
 volumes:
   postgres_data:
     driver: local
+
+networks:
+  app-network:
+    driver: bridge
