--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ bcrypt==4.1.2
 python-dotenv==1.0.1
 watchdog==3.0.0
 redis==5.0.1
-celery==5.3.6
+celery>=5.2.0
 pytest==8.0.2
 pytest-mock==3.12.0
 pyTelegramBotAPI==4.15.4
