--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -9,6 +9,8 @@ services:
       - redis
     env_file:
       - .env
+    volumes:
+      - .:/app
     restart: always
     ports:
       - 8443:8443
@@ -20,17 +22,17 @@ services:
     image: postgres:16
     container_name: hdays_db
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - ./postgres_data:/var/lib/postgresql/data
     env_file:
       - .env  
     restart: always
+    ports:
+      - 5455:5432
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
       interval: 5s
       timeout: 5s
       retries: 5
-    ports:
-      - 5455:5432
     networks:
       - app-network
 
@@ -51,6 +53,8 @@ services:
         condition: service_started
     env_file:
       - .env
+    volumes:
+      - .:/app
     restart: always
     command: celery -A tasks worker --loglevel=info
     networks:
@@ -64,6 +68,8 @@ services:
       - redis
     env_file:
       - .env
+    volumes:
+      - .:/app
     restart: always
     command: celery -A tasks beat --loglevel=info
     networks:
